<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddValueActivity">

    <EditText
        android:id="@+id/edit_text_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/caption"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/switch_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:checked="false"
            android:onClick="setDateTimeButtonsActivity"
            android:text="@string/use_date" />

        <Button
            android:id="@+id/button_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:enabled="false"
            android:onClick="showTimePicker"
            android:text="@string/time" />

        <Button
            android:id="@+id/button_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:enabled="false"
            android:onClick="showDatePicker"
            android:text="@string/date" />

    </LinearLayout>

    <EditText
        android:id="@+id/edit_text_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="top|start"
        android:hint="@string/enter_content"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="applyNoteAndFinish"
        android:text="@string/save" />

</LinearLayout>